# Regent

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  package-lock.json  rust-toolchain.toml
src/crates/regent-agent/: Cargo.toml
src/crates/regent-agent/prompts/: constitution.md
src/crates/regent-agent/src/: lib.rs
src/crates/regent-agent/src/application/: cron_runner.rs  history_levers.rs  lifecycle.rs  mod.rs  review.rs
src/crates/regent-agent/src/domain/: collapse.rs  compression.rs  compression_tests.rs  config.rs  mod.rs  prompts.rs
src/crates/regent-agent/tests/: agent_loop.rs  board_dispatch.rs  cancel.rs  delegation.rs  dispatch_order.rs  doom_loop.rs  learning_loop.rs  memory_integration.rs
src/crates/regent-agent/tests/agent_loop/: helpers.rs  interrupts.rs  main.rs  resume.rs  turn_flow.rs
src/crates/regent-code/: Cargo.toml
src/crates/regent-code/src/: lib.rs
src/crates/regent-code/src/application/: harness.rs  mod.rs
src/crates/regent-code/src/domain/: mod.rs  mod_tests.rs
src/crates/regent-code/src/infra/: checkpoint.rs  diagnostics.rs  diagnostics_tests.rs  mod.rs  verify.rs
src/crates/regent-code/tests/: diagnostics.rs  fix_retry.rs  harness_flow.rs
src/crates/regent-cron/: Cargo.toml
src/crates/regent-cron/src/: lib.rs
src/crates/regent-cron/src/application/: scheduler.rs
src/crates/regent-cron/src/domain/: contracts.rs  entities.rs  errors.rs
src/crates/regent-cron/src/infra/: fs_jobs.rs  mod.rs
src/crates/regent-cron/tests/: scheduler_behavior.rs
src/crates/regent-deacon/: Cargo.toml
src/crates/regent-deacon/src/: lib.rs
src/crates/regent-deacon/src/application/: background.rs  background_task_tool.rs  board_dispatch.rs  code_task_tool.rs  constitution.rs  distiller.rs  explore_tool.rs  http_serve.rs  mod.rs  provider_factory.rs  provider_registry.rs  provider_registry_tests.rs  regent_tool.rs  speech_factory.rs  speech_factory_tests.rs
src/crates/regent-deacon/src/domain/: cache_policy.rs  config.rs  contracts.rs  entities.rs  errors.rs  ledger.rs  mod.rs  provider_kind.rs
src/crates/regent-deacon/src/infra/: config_loader.rs  discord_interactions.rs  discord_interactions_tests.rs  http_listener.rs  logging.rs  speech_http.rs  transport.rs  webhook.rs
src/crates/regent-deacon/tests/: deacon_basics.rs  token_budget.rs
src/crates/regent-deacon/tests/deacon_basics/: code_skill.rs  dispatcher_admin.rs  dispatcher_basic.rs  dispatcher_models.rs  distiller.rs  explore.rs  helpers.rs  ledger.rs  main.rs  routing.rs  rpc_types.rs  sessions.rs  tiering.rs  turns.rs
src/crates/regent-embed/: Cargo.toml
src/crates/regent-embed/src/: lib.rs
src/crates/regent-embed/tests/: fusion_eval.rs
src/crates/regent-gateway/: Cargo.toml
src/crates/regent-gateway/src/: lib.rs
src/crates/regent-gateway/src/application/: approval.rs  format.rs  mod.rs  runner.rs
src/crates/regent-gateway/src/domain/: auth.rs  contracts.rs  entities.rs  errors.rs  mod.rs  rate.rs
src/crates/regent-gateway/src/infra/: mod.rs  speech_http.rs
src/crates/regent-gateway/tests/: gateway_behavior.rs
src/crates/regent-graph/: Cargo.toml
src/crates/regent-graph/src/: lib.rs
src/crates/regent-graph/src/application/: entries.rs  evals.rs  evals_tests.rs  mod.rs  orchestrators.rs  retrieve.rs  semantic.rs  semantic_tests.rs  staging.rs  views.rs
src/crates/regent-graph/src/domain/: entities.rs  errors.rs  mod.rs  policy.rs
src/crates/regent-graph/tests/: entries_behavior.rs  golden_retrieval.rs  vector_fusion.rs
src/crates/regent-kernel/: Cargo.toml
src/crates/regent-kernel/src/: lib.rs  redact.rs
src/crates/regent-kernel/src/contracts/: embedding.rs  mod.rs  speech.rs  speech_tests.rs  speech_types.rs  tool.rs
src/crates/regent-kernel/src/types/: error.rs  id.rs  message.rs  mod.rs  model_ref.rs  transcript.rs  transcript_tests.rs
src/crates/regent-orchustr-core/or-core/: Cargo.toml
src/crates/regent-orchustr-core/or-core/src/: lib.rs
src/crates/regent-orchustr-core/or-mcp/: Cargo.toml
src/crates/regent-orchustr-core/or-mcp/src/: known_servers.rs  lib.rs  multi_client.rs
src/crates/regent-providers/: Cargo.toml
src/crates/regent-providers/src/: lib.rs
src/crates/regent-providers/src/application/: orchestrators.rs
src/crates/regent-providers/src/domain/: contracts.rs  entities.rs  errors.rs
src/crates/regent-providers/src/infra/: adapters.rs  anthropic_chat.rs  http.rs  mod.rs  openai_compat.rs  openai_compat_tests.rs  openai_stream.rs  openai_stream_tests.rs
src/crates/regent-providers/tests/: fallback_chain.rs  wire_format.rs
src/crates/regent-realtime/: Cargo.toml
src/crates/regent-realtime/src/: lib.rs  lib_tests.rs  livekit_transport.rs  local.rs  openai_realtime.rs
src/crates/regent-skills/: Cargo.toml
src/crates/regent-skills/skills/code-reviewer/: SKILL.md
src/crates/regent-skills/skills/documents/: SKILL.md
src/crates/regent-skills/skills/ponytail/: SKILL.md
src/crates/regent-skills/skills/research/: SKILL.md
src/crates/regent-skills/skills/secure-code-guardian/: SKILL.md
src/crates/regent-skills/src/: lib.rs
src/crates/regent-skills/src/application/: curator.rs  index_render.rs  library.rs  mod.rs  prompts.rs
src/crates/regent-skills/src/domain/: contracts.rs  entities.rs  errors.rs
src/crates/regent-skills/tests/: library_behavior.rs
src/crates/regent-speech/: Cargo.toml
src/crates/regent-speech/src/: lib.rs  models.rs  models_tests.rs  registry.rs  registry_tests.rs  robustness.rs  vad.rs  wav.rs
src/crates/regent-store/: Cargo.toml
src/crates/regent-store/src/: lib.rs
src/crates/regent-store/tests/: store_roundtrip.rs
src/crates/regent-tools/: Cargo.toml
src/crates/regent-tools/src/: lib.rs
src/crates/regent-tools/tests/: mcp_integration.rs  permissions.rs
src/crates/regent-voice-server/: Cargo.toml
src/crates/regent-voice-server/src/: lib.rs  main.rs
src/regent-app/Desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/regent-app/Installer/src-tauri/: Cargo.toml  tauri.conf.json
(+885 files in other folders)
