[workspace]
members = [
    "src/crates/regent-kernel",
    "src/crates/regent-store",
    "src/crates/regent-graph",
    "src/crates/regent-embed",
    "src/crates/regent-speech",
    "src/crates/regent-skills",
    "src/crates/regent-cron",
    "src/crates/regent-gateway",
    "src/crates/regent-realtime",
    "src/crates/regent-providers",
    "src/crates/regent-tools",
    "src/crates/regent-agent",
    "src/crates/regent-code",
    "src/crates/regent-deacon",
    "src/crates/regent-voice-server",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.96.0"
version = "0.1.0"

[workspace.dependencies]
# Orchustr (local path — pinned to the sibling checkout)
or-core = { path = "../Orchustr/orchustr/crates/or-core" }
or-mcp = { path = "../Orchustr/orchustr/crates/or-mcp" }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "json"] }
# Must track Orchustr's or-mcp: its `McpTool.input_schema` is a `schemars::Schema`
# (1.x). Keep this major in lockstep with Orchustr's workspace schemars pin.
schemars = "1"
# Last release — the crate is archived/unmaintained; no newer version exists.
serde_yaml = "0.9"
tower = { version = "0.5", features = ["util"] }

aes = "0.8"
async-trait = "0.1.83"
base64 = "0.22"
cbc = { version = "0.1", features = ["block-padding"] }
ed25519-dalek = "2"
form_urlencoded = "1"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4"
hmac = "0.13"
jsonwebtoken = "9"
rand = "0.10.1"
rsa = { version = "0.9", features = ["pem"] }
regex = "1.11"
sha1 = "0.11"
sha2 = "0.11"
sherpa-rs = "0.6.8"
tar = "0.4"
bzip2 = "0.6"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream", "form", "multipart"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["v4"] }
walkdir = "2.5"

# dev
tempfile = "3.14"
