[package]
name = "regent-code"
description = "Coding harness over regent-agent: plan-mode gate → edit → per-step verify → revert-to-last-green."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
regent-kernel = { path = "../regent-kernel" }
regent-store = { path = "../regent-store" }
regent-providers = { path = "../regent-providers" }
regent-tools = { path = "../regent-tools" }
regent-agent = { path = "../regent-agent" }
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
or-core.workspace = true
tempfile.workspace = true
