[package]
name = "regent-gateway"
description = "Messaging gateway: platform adapter contract, auth (allowlist + pairing), session routing, approval-over-chat."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
regent-kernel = { path = "../regent-kernel" }
regent-speech = { path = "../regent-speech" }
regent-tools = { path = "../regent-tools" }
# bin-only (composition root for the runnable gateway):
regent-agent = { path = "../regent-agent" }
regent-graph = { path = "../regent-graph" }
regent-providers = { path = "../regent-providers" }
regent-skills = { path = "../regent-skills" }
regent-store = { path = "../regent-store" }
aes.workspace = true
async-trait.workspace = true
base64.workspace = true
cbc.workspace = true
form_urlencoded.workspace = true
futures-util.workspace = true
hex.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
rsa.workspace = true
tempfile.workspace = true

[[bin]]
name = "regent-gateway"
path = "src/bin/gateway/main.rs"
