[package]
name = "regent-kernel"
description = "Shared contracts for Regent: messages, transcript invariants, tool definitions, failures."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
