[package]
name = "regent-realtime"
description = "Real-time voice-call engine: a transport-agnostic relay between a call transport (Discord/LiveKit/…) and a speech-to-speech provider (OpenAI Realtime/Gemini Live), bridging tool calls to Regent's tools."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# LiveKit transport (ADR-021 R2). Optional + feature-gated: it pulls native
# libwebrtc (webrtc-sys), so the default workspace build never touches it.
livekit = { version = "0.7", optional = true }
futures-util = { workspace = true, optional = true }

[features]
# `cargo build -p regent-realtime --features livekit` to build the WebRTC transport.
livekit = ["dep:livekit", "dep:futures-util"]
