[package]
name = "regent-speech"
description = "Pluggable voice stack: ASR/TTS provider registry, model manager, VAD, and robustness layer. Disabled by default."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
regent-kernel = { path = "../regent-kernel" }
sha2.workspace = true
hex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
