[package]
name = "regent-tools"
description = "Regent tool catalog, dangerous-command guard, and core tool executors (terminal, files, search)."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
regent-kernel = { path = "../regent-kernel" }
regent-graph = { path = "../regent-graph" }
regent-skills = { path = "../regent-skills" }
regent-store = { path = "../regent-store" }
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true
or-mcp.workspace = true
futures.workspace = true
# `read_document` (office/PDF text extraction — no Python dependency).
zip = { version = "8", default-features = false, features = ["deflate"] }
calamine = "0.36"
pdf-extract = "0.12"
# OCR rung for scanned/image documents: PP-OCR det+cls+rec over the same ort
# runtime fastembed already brings in; models cached under ~/.regent/models.
# Vendored: upstream pins ort rc.10/ndarray 0.16, incompatible with fastembed's.
paddle-ocr-rs = { path = "../paddle-ocr-rs" }
image = "0.25"
lopdf = "0.44"

[dev-dependencies]
schemars.workspace = true
tempfile.workspace = true
