[package]
name = "or-core"
version = "0.1.3"
description = "Core contracts for Orchustr: state traits, retry policies, token budgets, and in-memory persistence. Vendored from the Orchustr repo (see vendor/README.md)."
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall = "0.13"
