[package]
name = "regent-installer"
version = "0.1.0"
edition = "2021"
description = "Regent Setup — unified GUI installer shell (deacon + CLI + app)."
license = "MIT"

# Opt out of the repo's root workspace (edition 2024/resolver 3): Tauri needs
# edition 2021 and a self-contained dep graph, like the Desktop app's src-tauri.
[workspace]

[lib]
name = "regent_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
